# rds-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  run.sh
backend/: _api.py  config.py  dev.py  main.py  models.py  sources.py  utils.py
backend/api/: client_factory.py  dependencies.py  main.py
backend/api/routers/: __init__.py  account.py  datasets.py  jobs.py  trusted_datasites.py
backend/api/services/: __init__.py  dataset_service.py  job_service.py  shopify_service.py  trusted_datasites_service.py
backend/lib/: html_static_files.py  shopify.py
docker/: DEVELOPMENT.md  DOCKER_HUB_DESCRIPTION.md  DOCKER_HUB_OVERVIEW.md  Dockerfile.rds-dashboard-do  README.md
frontend/: .gitignore  bun.lockb  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/components/: header.tsx  navigation.tsx
frontend/app/datasets/: datasets-view.tsx  page.tsx
frontend/app/datasets/components/: activity-graph.tsx  add-datasets-action.tsx  create-dataset-modal.tsx  (+9 more)
frontend/app/jobs/: jobs-view.tsx  page.tsx
frontend/components/: api-config-init.tsx  mode-toggle.tsx  state-debugger.tsx
frontend/components/svg/: openmined-logo.tsx  organic-coop-logo.tsx
frontend/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  icon-wrapper.tsx  navigation-menu.tsx  sheet.tsx  sonner.tsx  switch.tsx  toast.tsx  toggle-group.tsx  tooltip.tsx
frontend/lib/: constants.ts  utils.ts
frontend/lib/api/: api-client.ts  api.ts  config.ts  datasets.ts  errors.ts  jobs.ts  trusted-datasites.ts  types.ts
frontend/scripts/: configure-build.js
scripts/: docker-release.sh  entrypoint.sh  run-with-host-syftbox.sh  setup-syftbox.sh  supervisord.conf
(+8 files in other folders)
