[project]
name = "rds-dashboard"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "syft-rds>=0.5.0",
    "fastapi>=0.118.0",
    "pandas==2.3.3",
    "filelock>=3.19.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "syft-core>=0.2.3",
    "uvicorn>=0.37.0",
]

# [tool.uv.sources]
# syft-rds = { git = "https://github.com/OpenMined/syft-rds/", branch = "feature/python-runtime-uv-envs" }  # for development
# syft-rds = { path = "../syft-rds", editable = true }  # local development

[dependency-groups]
dev = []
